{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 50,
  "lineage": "c7a10def-f9bc-d458-83f8-386b0d2a3c18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "test-tgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-1:979559056307:transit-gateway/tgw-07f95b3daedc58531",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "Transit Gateway testing scenario with 4 VPCs, 2 subnets each",
            "dns_support": "enable",
            "id": "tgw-07f95b3daedc58531",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-tgw-demo",
              "scenario": "Dohoney"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-dev-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0ff3033a9dc457b70",
            "tags": {
              "Name": "Dohoney-tgw-dev-rt",
              "scenario": "Dohoney"
            },
            "transit_gateway_id": "tgw-07f95b3daedc58531"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-prod-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-08138b16bb742b5d9",
            "tags": {
              "Name": "Dohoney-tgw-prod-rt",
              "scenario": "Dohoney"
            },
            "transit_gateway_id": "tgw-07f95b3daedc58531"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-shared-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-09c8e7e15406be512",
            "tags": {
              "Name": "Dohoney-tgw-shared-rt",
              "scenario": "Dohoney"
            },
            "transit_gateway_id": "tgw-07f95b3daedc58531"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-1-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ff3033a9dc457b70_tgw-attach-0bc56137197427147",
            "resource_id": "vpc-0ad28d4081397cddb",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0bc56137197427147",
            "transit_gateway_route_table_id": "tgw-rtb-0ff3033a9dc457b70"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-2-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ff3033a9dc457b70_tgw-attach-058e85b7ce0f806db",
            "resource_id": "vpc-0f8e13a30556fefec",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-058e85b7ce0f806db",
            "transit_gateway_route_table_id": "tgw-rtb-0ff3033a9dc457b70"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-3-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09c8e7e15406be512_tgw-attach-0697c3ac0eaaaf0d2",
            "resource_id": "vpc-0ebe243ed92f55d1d",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0697c3ac0eaaaf0d2",
            "transit_gateway_route_table_id": "tgw-rtb-09c8e7e15406be512"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-4-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08138b16bb742b5d9_tgw-attach-06986c2fa9e1224f7",
            "resource_id": "vpc-0a52d6e13e3357aee",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-06986c2fa9e1224f7",
            "transit_gateway_route_table_id": "tgw-rtb-08138b16bb742b5d9"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-prod-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-dev-to-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ff3033a9dc457b70_tgw-attach-0bc56137197427147",
            "resource_id": "vpc-0ad28d4081397cddb",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0bc56137197427147",
            "transit_gateway_route_table_id": "tgw-rtb-0ff3033a9dc457b70"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-dev-to-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ff3033a9dc457b70_tgw-attach-058e85b7ce0f806db",
            "resource_id": "vpc-0f8e13a30556fefec",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-058e85b7ce0f806db",
            "transit_gateway_route_table_id": "tgw-rtb-0ff3033a9dc457b70"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-dev-to-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ff3033a9dc457b70_tgw-attach-0697c3ac0eaaaf0d2",
            "resource_id": "vpc-0ebe243ed92f55d1d",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0697c3ac0eaaaf0d2",
            "transit_gateway_route_table_id": "tgw-rtb-0ff3033a9dc457b70"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-prod-to-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08138b16bb742b5d9_tgw-attach-0697c3ac0eaaaf0d2",
            "resource_id": "vpc-0ebe243ed92f55d1d",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0697c3ac0eaaaf0d2",
            "transit_gateway_route_table_id": "tgw-rtb-08138b16bb742b5d9"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-prod-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-shared-to-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09c8e7e15406be512_tgw-attach-0bc56137197427147",
            "resource_id": "vpc-0ad28d4081397cddb",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0bc56137197427147",
            "transit_gateway_route_table_id": "tgw-rtb-09c8e7e15406be512"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-shared-to-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09c8e7e15406be512_tgw-attach-058e85b7ce0f806db",
            "resource_id": "vpc-0f8e13a30556fefec",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-058e85b7ce0f806db",
            "transit_gateway_route_table_id": "tgw-rtb-09c8e7e15406be512"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-shared-to-vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09c8e7e15406be512_tgw-attach-06986c2fa9e1224f7",
            "resource_id": "vpc-0a52d6e13e3357aee",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-06986c2fa9e1224f7",
            "transit_gateway_route_table_id": "tgw-rtb-09c8e7e15406be512"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0bc56137197427147",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0a3729c1810bae892",
              "subnet-0f90b20e1447df71c"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc1",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07f95b3daedc58531",
            "vpc_id": "vpc-0ad28d4081397cddb",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-1-sub-a",
            "aws_subnet.vpc-1-sub-b",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-058e85b7ce0f806db",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-01631a6512d4a8c45",
              "subnet-03da31094b84a9a4a"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc2",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07f95b3daedc58531",
            "vpc_id": "vpc-0f8e13a30556fefec",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-2-sub-a",
            "aws_subnet.vpc-2-sub-b",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0697c3ac0eaaaf0d2",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-068b40439887cf734",
              "subnet-0db3afd4b5b2a5131"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc3",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07f95b3daedc58531",
            "vpc_id": "vpc-0ebe243ed92f55d1d",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-3-sub-a",
            "aws_subnet.vpc-3-sub-b",
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-06986c2fa9e1224f7",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-088a5a5059d9d49ce",
              "subnet-089eb01aa948201f2"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc4",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07f95b3daedc58531",
            "vpc_id": "vpc-0a52d6e13e3357aee",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-4-sub-a",
            "aws_subnet.vpc-4-sub-b",
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance1-dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ca54a39d4e74d5d",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-080279f6324fbe084",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080279f6324fbe084",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d917bd29d348b2df",
            "private_dns": "ip-10-10-1-10.us-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a3b11f4d73b5a57f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3729c1810bae892",
            "tags": {
              "Name": "Dohoney-test-tgw-instance1-dev",
              "az": "us-west-1b",
              "env": "dev",
              "scenario": "Dohoney",
              "vpc": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e4230d1ab1a76ea8"
            ]
          },
          "depends_on": [
            "aws_key_pair.tgw-keypair",
            "aws_security_group.sec-group-vpc-1-ssh-icmp",
            "aws_subnet.vpc-1-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance2-dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ca54a39d4e74d5d",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-02a3b74ef7a3008aa",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a3b74ef7a3008aa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d839984bf199289",
            "private_dns": "ip-10-11-1-10.us-west-1.compute.internal",
            "private_ip": "10.11.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e4daf323568fecdf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01631a6512d4a8c45",
            "tags": {
              "Name": "Dohoney-test-tgw-instance2-dev",
              "az": "us-west-1b",
              "env": "dev",
              "scenario": "Dohoney",
              "vpc": "2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0597844891946602e"
            ]
          },
          "depends_on": [
            "aws_key_pair.tgw-keypair",
            "aws_security_group.sec-group-vpc-2-ssh-icmp",
            "aws_subnet.vpc-2-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance3-shared",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ca54a39d4e74d5d",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-0fc4fe44e01a0dc44",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc4fe44e01a0dc44",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030986edbd44087bd",
            "private_dns": "ip-10-12-1-10.us-west-1.compute.internal",
            "private_ip": "10.12.1.10",
            "public_dns": "ec2-52-53-222-203.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.222.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02e54b7ad7d398c0e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068b40439887cf734",
            "tags": {
              "Name": "Dohoney-test-tgw-instance3-shared",
              "az": "us-west-1b",
              "env": "shared",
              "scenario": "Dohoney",
              "vpc": "3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0199c554cc86dc464"
            ]
          },
          "depends_on": [
            "aws_key_pair.tgw-keypair",
            "aws_security_group.sec-group-vpc-3-ssh-icmp",
            "aws_subnet.vpc-3-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance4-prod",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ca54a39d4e74d5d",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-08d322d8802b3d38f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d322d8802b3d38f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6c4be21ffb73ddf",
            "private_dns": "ip-10-13-1-10.us-west-1.compute.internal",
            "private_ip": "10.13.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03808e03e2a87f59d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089eb01aa948201f2",
            "tags": {
              "Name": "Dohoney-test-tgw-instance4-prod",
              "az": "us-west-1b",
              "env": "prod",
              "scenario": "Dohoney",
              "vpc": "4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0504d3f1d65dd6e34"
            ]
          },
          "depends_on": [
            "aws_key_pair.tgw-keypair",
            "aws_security_group.sec-group-vpc-4-ssh-icmp",
            "aws_subnet.vpc-4-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-3-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02c298af44d4dfdf0",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc-3-igw",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0ebe243ed92f55d1d"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0266e002011c52ca7",
            "original_route_table_id": "rtb-069aeb2bbdc093dbe",
            "route_table_id": "rtb-0708677e883695dc4",
            "vpc_id": "vpc-0ad28d4081397cddb"
          },
          "depends_on": [
            "aws_route_table.vpc-1-rtb",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0cde7756477ea3",
            "original_route_table_id": "rtb-028975795dcc8bd33",
            "route_table_id": "rtb-07100d37eee8e3ac9",
            "vpc_id": "vpc-0f8e13a30556fefec"
          },
          "depends_on": [
            "aws_route_table.vpc-2-rtb",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09944ead807b547d8",
            "original_route_table_id": "rtb-052b086806f8957ef",
            "route_table_id": "rtb-031b8771ed950b8dd",
            "vpc_id": "vpc-0ebe243ed92f55d1d"
          },
          "depends_on": [
            "aws_route_table.vpc-3-rtb",
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f04787dc6efd1874",
            "original_route_table_id": "rtb-0c881c83af4c4d31c",
            "route_table_id": "rtb-03ec91ea65a1a70d4",
            "vpc_id": "vpc-0a52d6e13e3357aee"
          },
          "depends_on": [
            "aws_route_table.vpc-4-rtb",
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0708677e883695dc4",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07f95b3daedc58531",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-1-rtb",
              "env": "dev",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0ad28d4081397cddb"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-2-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07100d37eee8e3ac9",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07f95b3daedc58531",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-2-rtb",
              "env": "dev",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0f8e13a30556fefec"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-3-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-031b8771ed950b8dd",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c298af44d4dfdf0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07f95b3daedc58531",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-3-rtb",
              "env": "shared",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0ebe243ed92f55d1d"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_internet_gateway.vpc-3-igw",
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-4-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ec91ea65a1a70d4",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07f95b3daedc58531",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-4-rtb",
              "env": "prod",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0a52d6e13e3357aee"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-1-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-0e4230d1ab1a76ea8",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4230d1ab1a76ea8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-1-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-vpc-1-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad28d4081397cddb"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-2-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-0597844891946602e",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0597844891946602e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-2-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-vpc-2-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8e13a30556fefec"
          },
          "depends_on": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-3-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-0199c554cc86dc464",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0199c554cc86dc464",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-3-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-vpc-3-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe243ed92f55d1d"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-4-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-0504d3f1d65dd6e34",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0504d3f1d65dd6e34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-4-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dohoney-sec-group-vpc-4-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a52d6e13e3357aee"
          },
          "depends_on": [
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-0a3729c1810bae892",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0a3729c1810bae892",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc1-dev-sub-a"
            },
            "vpc_id": "vpc-0ad28d4081397cddb"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-0f90b20e1447df71c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0f90b20e1447df71c",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc1-dev-sub-b"
            },
            "vpc_id": "vpc-0ad28d4081397cddb"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-01631a6512d4a8c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.11.1.0/24",
            "id": "subnet-01631a6512d4a8c45",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc2-dev-sub-a"
            },
            "vpc_id": "vpc-0f8e13a30556fefec"
          },
          "depends_on": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-03da31094b84a9a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.11.2.0/24",
            "id": "subnet-03da31094b84a9a4a",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc2-dev-sub-b"
            },
            "vpc_id": "vpc-0f8e13a30556fefec"
          },
          "depends_on": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-3-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-068b40439887cf734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.12.1.0/24",
            "id": "subnet-068b40439887cf734",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc3-shared-sub-a"
            },
            "vpc_id": "vpc-0ebe243ed92f55d1d"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-3-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-0db3afd4b5b2a5131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.12.2.0/24",
            "id": "subnet-0db3afd4b5b2a5131",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc3-shared-sub-b"
            },
            "vpc_id": "vpc-0ebe243ed92f55d1d"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-4-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-089eb01aa948201f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.13.1.0/24",
            "id": "subnet-089eb01aa948201f2",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc4-prod-sub-a"
            },
            "vpc_id": "vpc-0a52d6e13e3357aee"
          },
          "depends_on": [
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-4-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-088a5a5059d9d49ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.13.2.0/24",
            "id": "subnet-088a5a5059d9d49ce",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc4-prod-sub-b"
            },
            "vpc_id": "vpc-0a52d6e13e3357aee"
          },
          "depends_on": [
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-0ad28d4081397cddb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08e007a1551f01f4b",
            "default_route_table_id": "rtb-069aeb2bbdc093dbe",
            "default_security_group_id": "sg-0ed8b7f122b64acc4",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad28d4081397cddb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069aeb2bbdc093dbe",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc1-dev",
              "env": "dev",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-0f8e13a30556fefec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-02293de66a6432477",
            "default_route_table_id": "rtb-028975795dcc8bd33",
            "default_security_group_id": "sg-0d90318c9f4711dd9",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f8e13a30556fefec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-028975795dcc8bd33",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc2-dev",
              "env": "dev",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-0ebe243ed92f55d1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-04187eac6fe97da94",
            "default_route_table_id": "rtb-052b086806f8957ef",
            "default_security_group_id": "sg-00fffa4e2cf071ab2",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ebe243ed92f55d1d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-052b086806f8957ef",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc3-shared",
              "env": "shared",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-0a52d6e13e3357aee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.13.0.0/16",
            "default_network_acl_id": "acl-079876c65a5272b3b",
            "default_route_table_id": "rtb-0c881c83af4c4d31c",
            "default_security_group_id": "sg-0f834188e46ca9fc5",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a52d6e13e3357aee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c881c83af4c4d31c",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc4-prod",
              "env": "prod",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    }
  ]
}